Project VoedselpakketDomein {
  database_type: "MySQL"
}

/* =========================
   KLANT & GEZIN
   ========================= */

Table gezinnen {
  id int [pk, increment]
  gezins_naam varchar(255)
  volwassenen tinyint
  kinderen tinyint
  babys tinyint
  is_actief boolean
}

Table klanten {
  id int [pk, increment]
  naam varchar(255)
  email varchar(255) [unique]
  telefoon varchar(20)
  adres_id int
  gezin_id int
  is_actief boolean
}

/* =========================
   KLANT VOORWAARDEN
   ========================= */

Table klant_wensen {
  id int [pk, increment]
  klant_id int
  wens_id int
  is_actief boolean
}

Table klant_allergenen {
  id int [pk, increment]
  klant_id int
  allergie_id int
  is_actief boolean
}

Table wensen {
  id int [pk, increment]
  naam varchar(50)
  omschrijving varchar(100)
  is_actief boolean
}

Table allergenen {
  id int [pk, increment]
  naam varchar(100)
  is_actief boolean
}

/* =========================
   PRODUCTEN
   ========================= */

Table categorieen {
  id int [pk, increment]
  naam varchar(100)
  is_actief boolean
}

Table producten {
  id int [pk, increment]
  product_naam varchar(255)
  ean char(13)
  categorie_id int
  aantal_voorraad int
  is_actief boolean
}

Table product_kenmerken {
  id int [pk, increment]
  product_id int
  wens_id int
  is_actief boolean
}

Table product_allergenen {
  id int [pk, increment]
  product_id int
  allergie_id int
  is_actief boolean
}

/* =========================
   VOEDSELPAKKETTEN
   ========================= */

Table voedselpakketten {
  id int [pk, increment]
  pakketnummer char(12)
  klant_id int
  datum_samenstelling datetime
  datum_uitgifte datetime
  is_actief boolean
}

Table voedselpakket_producten {
  id int [pk, increment]
  voedselpakket_id int
  product_id int
  aantal tinyint
  is_actief boolean
}

/* =========================
   RELATIES
   ========================= */

Ref: klanten.gezin_id > gezinnen.id

Ref: klant_wensen.klant_id > klanten.id
Ref: klant_wensen.wens_id > wensen.id

Ref: klant_allergenen.klant_id > klanten.id
Ref: klant_allergenen.allergie_id > allergenen.id

Ref: producten.categorie_id > categorieen.id

Ref: product_kenmerken.product_id > producten.id
Ref: product_kenmerken.wens_id > wensen.id

Ref: product_allergenen.product_id > producten.id
Ref: product_allergenen.allergie_id > allergenen.id

Ref: voedselpakketten.klant_id > klanten.id

Ref: voedselpakket_producten.voedselpakket_id > voedselpakketten.id
Ref: voedselpakket_producten.product_id > producten.id
